:bug: fixed z-index of header/footer nav

--- a/src/styles/_component.footer.scss
+++ b/src/styles/_component.footer.scss
@@ -7,6 +7,7 @@
 	border-radius: 12px 12px 0 0;
 	height: 76px;
 	width: 100%;
+	z-index: 999;
 	&__link {
 		&:hover,
 		&:focus {
