--- a/src/styles/_component.header.scss
+++ b/src/styles/_component.header.scss
@@ -7,6 +7,7 @@
     padding: 50px 25px;
     height: 100px;
     width: 100%;
+    z-index: 999;
     &__button {
         float: left;
         font-size: 30px;
@@ -31,7 +32,7 @@
     position: fixed;
     height: 100px;
     width: 100%;
-    z-index: 98;
+    z-index: 999;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
